n8n/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
spec:
  selector:
    app: n8n
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
